# quickjs-footprint

./: .gitignore  README.md  hello.c  hello.version  meson.build  run-bytecode.c  run-js.c
